crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_alias_bool_keeps_header_type.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nimport Builtin exposing (..)\nf : () -> ()\nf (True as whole) = whole ()\n"
info: diagnostic
---
nash::type::mismatch

  × `whole` is not a function; received 1 argument.
   ╭─[Main.nash:4:21]
 3 │ f : () -> ()
 4 │ f (True as whole) = whole ()
   ·                     ─────
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `unit`, found `bool`.
   ╭─[Main.nash:4:4]
 2 │ import Builtin exposing (..)
 3 │ f : () -> ()
   ·     ────┬───
   ·         ╰── declared argument type
 4 │ f (True as whole) = whole ()
   ·    ──┬──
   ·      ╰── argument 1 of `f`
   ╰────
