crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_alias_nested_keeps_header_type.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nimport Builtin exposing (..)\nf : ((), ()) -> ()\nf (((True as a), (() as b)) as whole) = whole ()\n"
info: diagnostic
---
nash::type::mismatch

  × `whole` is not a function; received 1 argument.
   ╭─[Main.nash:4:41]
 3 │ f : ((), ()) -> ()
 4 │ f (((True as a), (() as b)) as whole) = whole ()
   ·                                         ─────
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `unit`, found `bool`.
   ╭─[Main.nash:4:6]
 3 │ f : ((), ()) -> ()
 4 │ f (((True as a), (() as b)) as whole) = whole ()
   ·      ──┬──
   ·        ╰── boolean pattern
   ╰────
