crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_annotated_case_keeps_both_mismatches.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nimport Builtin exposing (..)\nf : ()\nf = case True of\n    True -> (\\x -> x)\n    False -> (\\y -> y)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:6:15]
 2 │ import Builtin exposing (..)
 3 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 4 │ f = case True of
 5 │     True -> (\x -> x)
 6 │     False -> (\y -> y)
   ·               ───┬───
   ·                  ╰── case branch 2
   ╰────


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:14]
 2 │ import Builtin exposing (..)
 3 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 4 │ f = case True of
 5 │     True -> (\x -> x)
   ·              ───┬───
   ·                 ╰── case branch 1
 6 │     False -> (\y -> y)
   ╰────
