crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_annotated_if_keeps_both_mismatches.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nimport Builtin exposing (..)\nf : ()\nf = if True then (\\x -> x) else (\\y -> y)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:4:34]
 2 │ import Builtin exposing (..)
 3 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 4 │ f = if True then (\x -> x) else (\y -> y)
   ·                                  ───┬───
   ·                                     ╰── if branch 2
   ╰────


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:4:19]
 2 │ import Builtin exposing (..)
 3 │ f : ()
   ·     ─┬
   ·      ╰── declared type
 4 │ f = if True then (\x -> x) else (\y -> y)
   ·                   ───┬───
   ·                      ╰── if branch 1
   ╰────
