crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_cons_tail_keeps_independent_mismatch.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nimport Builtin exposing (..)\nf : () -> ()\nf (x :: ()) = ()\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `f`.
   ╭─[Main.nash:4:1]
 3 │ f : () -> ()
 4 │ f (x :: ()) = ()
   · ─
   ╰────
  help: Required constraints: Storable 'a

        Add a type annotation that determines this variable.


nash::type::pattern_mismatch

  × Type mismatch: expected `list 'a`, found `unit`.
   ╭─[Main.nash:4:9]
 3 │ f : () -> ()
 4 │ f (x :: ()) = ()
   ·         ─┬
   ·          ╰── list tail pattern
   ╰────


nash::type::pattern_mismatch

  × Type mismatch: expected `unit`, found `list 'a`.
   ╭─[Main.nash:4:4]
 2 │ import Builtin exposing (..)
 3 │ f : () -> ()
   ·     ────┬───
   ·         ╰── declared argument type
 4 │ f (x :: ()) = ()
   ·    ───┬───
   ·       ╰── argument 1 of `f`
   ╰────
