crates/nash-driver/tests/solve/snapshots/solve__inference__recovery_direct_recursive_occurs_precedes_generalization.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\nf x = f\nuse = f ()\nbad : ()\nbad = \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:7]
 3 │ use = f ()
 4 │ bad : ()
   ·       ─┬
   ·        ╰── declared type
 5 │ bad = \x -> x
   ·       ───┬───
   ·          ╰── body of `bad`
   ╰────


nash::type::infinite_type

  × `f` has a self-referential type: 'a -> ∞
   ╭─[Main.nash:2:1]
 1 │ module Main exposing (..)
 2 │ f x = f
   · ─
 3 │ use = f ()
   ╰────
  help: Break the type cycle; ∞ marks a repeated part of the type.
