crates/nash-driver/tests/solve/snapshots/solve__inference__recursive_evidence_growth_through_a_nested_helper_is_rejected.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntype option 'a = Some 'a\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (option 'a) where\n    keep xs = xs\nnest : Keep 'a => 'a -> ()\nnest x =\n    let\n        helper : Keep 'b => 'b -> ()\n        helper y = nest (Some y)\n    in\n    helper x\n"
info: diagnostic
---
nash::type::polymorphic_recursion

  × Recursive call to `nest` grows its trait requirement.
    ╭─[Main.nash:11:20]
 10 │         helper : Keep 'b => 'b -> ()
 11 │         helper y = nest (Some y)
    ·                    ────
 12 │     in
    ╰────
  help: Keep (option 'b)

        Keep trait arguments stable across recursive calls, or split the recursion.
