crates/nash-driver/tests/solve/snapshots/solve__inference__recursive_function.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (forever)\n\nforever x = forever x\n"
---
forever : forall a b. a -> b
